<resources>
    <string name="app_name">ES_Tablewatcher</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fragment_menu">Fragment Menu</string>
    <string name="fragment_gerirpratos">Fragment GerirPratos</string>
    <string name="fragment_gerirreservas">Fragment GerirReservas</string>
    <string name="fragment_gerirutilizadores">Fragment GerirUtilizadores</string>
    <string name="fragment_adicionarprato">Fragment AdicionarPrato</string>
    <string name="fragment_adicionarutilizador">Fragment AdicionarUtilizador</string>
    <string name="fragment_adicionarreservas">Fragment AdicionarReserva</string>
    <string name="fragment_gerirpratosareserva">Fragment GerirPratosAReserva</string>
</resources>